// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph 1`] = `
<div>
  <p>
    This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </p>
</div>
`;

exports[`paragraph with a drop cap 1`] = `
<div>
  <p>
    <span>
      T
    </span>
    his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </p>
</div>
`;

exports[`paragraph with a short text and a drop cap 1`] = `
<div>
  <p>
    <span>
      T
    </span>
    his being Black History
  </p>
</div>
`;
